// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputText > renders correctly 1`] = `
<input
  class="rounded-md shadow-sm block w-full border-transparent bg-gray-800 text-sm focus:border-green-500 focus:ring-green-500"
  type="text"
/>
`;

exports[`InputText renders correctly 1`] = `
<input
  class="shadow-sm rounded-md block w-full text-sm border-transparent bg-gray-800 focus:ring-green-500 focus:border-green-500"
  type="text"
/>
`;
